modules/cli/src/test/resources/bad/safety/stuckmsg/twoparty/Test01b.scr
module bad.safety.stuckmsg.twoparty.Test01b;

global protocol Proto1(role A, role B)
{
	rec X
	{
		choice at A
		{
			1() from A to B;
			continue X;
		}
		or
		{
			1() from A to B;
			2() from A to B;
			continue X;
		}
	}
}

